bookshelf/gke/service-lb.yaml
# By specifying the type as a 'LoadBalancer', Kubernetes Engine will
# create an external HTTP load balancer.
apiVersion: v1
kind: Service
metadata:
  name: bookshelf
spec:
  type: LoadBalancer
  selector:
    app: bookshelf
  ports:
  - port: 80
    targetPort: 8080
