bookshelf/gke/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookshelf
spec:
  selector:
    app: bookshelf
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
